[package]
name = "on"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4.1"
serde_json = "1.0"
clap = { version = "3.2", features = ["derive"] }
colored = "2"