[package]
name = "onlang"
version = "0.2.2"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "A programming language running on json or yaml"
repository = "https://github.com/artegoser/ONLang"
homepage = "https://github.com/artegoser/ONLang"
documentation = "https://github.com/artegoser/ONLang/blob/master/doc/main.md"
readme = "./README.md"
keywords = ["programming-language", "interpreter", "yaml", "json", "json5"]
categories = ["compilers"]

[[bin]]
name = "on"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4.1"
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "3.2", features = ["derive"] }
colored = "2"